# serialization

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: serializationConfig.cmake.in
include/: serialization.h
include/serialization/: array.h  complex.h  compound.h  deque.h  enum.h  fundamental.h  list.h  map.h  optional.h  set.h  string.h  tuple.h  unordered_map.h  unordered_set.h  utility.h  variant.h  vector.h
include/serialization/detail/: arrays.h  containers.h  maps.h
tests/: ArrayTest.cpp  CMakeLists.txt  ComplexTest.cpp  CompoundTest.cpp  DequeTest.cpp  EnumTest.cpp  FundamentalTest.cpp  ListTest.cpp  MapTest.cpp  OptionalTest.cpp  SetTest.cpp  StringTest.cpp  TupleTest.cpp  UnorderedMapTest.cpp  UnorderedSetTest.cpp  UtilityTest.cpp  VariantTest.cpp  VectorTest.cpp
